--- a/_posts/2022-11-29-LVI-SAM.md
+++ b/_posts/2022-11-29-LVI-SAM.md
@@ -61,7 +61,9 @@ tags:
 >
 >A1中的with depth深度信息来自于雷达，VIS并不是完全不使用雷达，详见VIS部分
 
-## 运行代码
+## 代码
+[代码仓库](https://github.com/ZhouShihui210/LVI-SAM_detailed_comments)
+
 rviz
 ![img](/img/in_post/LVI-SAM/6.png)
 
