--- a/_posts/2022-11-25-ORB-SLAM1.md
+++ b/_posts/2022-11-25-ORB-SLAM1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "论文笔记：ORB SLAM 1"
+title:  "ORB SLAM 1"
 subtitle: "ORB-SLAM: a Versatile and Accurate Monocular SLAM System"
 date:   2022-11-25 14:58:00 +0800
 author:     "ZhouSh"
