--- a/_posts/2022-11-29-LVI-SAM.md
+++ b/_posts/2022-11-29-LVI-SAM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "论文笔记：LVI-SAM"
+title:  "LVI-SAM"
 subtitle: "Tightly-coupled Lidar-Visual-Inertial Odometry via Smoothing and Mapping"
 date:   2022-11-29 20:32:00 +0800
 author:     "ZhouSh"
