--- a/_posts/2022-12-8-SLAM14-1-2.md
+++ b/_posts/2022-12-8-SLAM14-1-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "笔记：SLAM十四讲 1&2"
+title:  "SLAM十四讲 1&2"
 subtitle: " "
 date:   2022-12-8 17:10:00 +0800
 author:     "ZhouSh"
