--- a/_posts/2022-12-8-SLAM14-1-2.md
+++ b/_posts/2022-12-8-SLAM14-1-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "SLAM十四讲 1&2"
-subtitle: " "
+title:  "第1讲 预备知识 & 第2讲 初始SLAM"
+subtitle: "高翔《SLAM十四讲》"
 date:   2022-12-8 17:10:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
