--- a/_posts/2022-12-9-SLAM14-3.md
+++ b/_posts/2022-12-9-SLAM14-3.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "SLAM十四讲 3"
-subtitle: " "
-date:   2022-12-8 17:10:00 +0800
+title:  "第3讲 三维空间刚体运动"
+subtitle: "高翔《SLAM十四讲》"
+date:   2022-12-9 17:10:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
