--- a/_posts/2022-11-27-weicheng.md
+++ b/_posts/2022-11-27-weicheng.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "围城"
-subtitle:   "城外的人想冲进去，城里的人想逃出来。"
+subtitle:   "钱钟书：城外的人想冲进去，城里的人想逃出来。"
 date:   2022-11-27 10:57:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/weicheng/head.jpg"
 header-mask: 0
 tags:
-    - 摘记
+    - 读书笔记
 ---
 > 阅读时长：14h
 >
