update post SLAM14-3

--- a/_posts/2022-12-9-SLAM14-3.md
+++ b/_posts/2022-12-9-SLAM14-3.md
@@ -18,12 +18,18 @@ a\cdot b=a^Tb=\Sigma^3_{i=1}a_ib_i=\|a\|\|b\|cos<a,b>
 $
 
 **外积**的方向垂直于这两个向量，大小为$\|a\|\|b\|sin<a,b>$ ，是两个向量张成的四边形的有向面积
+<img src="/img/in_post/SLAM14/3/1.png" width="95%">
 
-$$
-a\times b=\left[
-\begin{matrix}
-1 & 2 & 3 \\
-4 & 5 & 6 \\
-7 & 8 & 9 
-\end{matrix} \right]
-$$
+> 对于外积，我们引入了$\Lambda$符号，把a写成一个矩阵。事实上是一个反对称矩阵（Skew-symmetric），你可以将$\Lambda$记成一个反对称符号。这样就把外积 $a\times b$ 写成了矩阵与向量的乘法$a\Lambda b$ ，把它变成了线性运算。这个符号将在后文经常用到，请记住它。外积只对三维向量存在定义，我们还能用外积表示向量的旋转。
+
+旋转矩阵有一些特别的性质。事实上，它是一个行列式为1的正交矩阵。反之，行列式为1的正交矩阵也是一个旋转矩阵。所以，可以把旋转矩阵的集合定义如下：
+<img src="/img/in_post/SLAM14/3/2.png" width="70%">
+
+> 正交矩阵即逆为自身转置的矩阵。
+>
+> SO(n) 是特殊正交群（Special Orthogonal Group）。这个集合由n维空间的旋转矩阵组成，SO(3)就是三维空间的旋转。
+
+变换矩阵T
+<img src="/img/in_post/SLAM14/3/3.png" width="80%">
+
+> SE(n) 是特殊欧式群（Special Euclidean Group）。
