update latex using

--- a/_posts/2022-12-23-SLAM14-4.md
+++ b/_posts/2022-12-23-SLAM14-4.md
@@ -47,10 +47,20 @@ tags:
 ## 4.2 指数与对数映射
 
 SO(3)上的**指数映射**即罗德里格斯公式：
-<img src="/img/in_post/SLAM14/4/3.png" width="70%">
+
+$
+exp(\theta a^\wedge)=cos\theta I+(1-cos\theta)aa^T+sin\theta a^\wedge
+\tag{1}
+$
+<!-- <img src="/img/in_post/SLAM14/4/3.png" width="70%"> -->
 
 SE(3)上的**指数映射**：
-<img src="/img/in_post/SLAM14/4/4.png" width="70%">
+
+$
+J=\frac{sin\theta}\theta I+(1-\frac{sin\theta}\theta)aa^T+\frac{1-cos\theta}\theta a^\wedge
+\tag{2}
+$
+<!-- <img src="/img/in_post/SLAM14/4/4.png" width="70%"> -->
 
 SO(3)，SE(3)，so(3)，se(3)的关系：
 <img src="/img/in_post/SLAM14/4/5.png" width="100%">
@@ -60,7 +70,12 @@ SO(3)，SE(3)，so(3)，se(3)的关系：
 ## 4.3 李代数求导与扰动模型
 
 **BCH公式**（化乘为加）：两个李代数指数映射的乘积，由Baker-Campbell-Hausdorff公式给出：
-<img src="/img/in_post/SLAM14/4/6.png" width="90%">
+
+$
+ln(exp(A)exp(B))=A+B+\frac12[A,B]+\frac1{12}[A,[A,B]]-\frac1{12}[B,[A,B]]+\cdots
+\tag{3}
+$
+<!-- <img src="/img/in_post/SLAM14/4/6.png" width="90%"> -->
 
 > 其中 [ ] 为李括号
 
