update post SLAM14-t

--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -17,3 +17,21 @@ tags:
 
 ## 7.3 2D-3D：对极几何
 
+### 7.3.1 对极约束
+<img src="/img/in_post/SLAM14/7/1.png" width="50%">
+
+我们希望求两帧图像$l_1$,$l_2$之间的运动。设第一帧$l_1$到第二帧$l_2$的运动为$R,t$，两个相机中心分别为$O_1,O_2$。考虑$l_1$中一特征点$p_1$，在$l_2$中对应着特征点$p_2$。$P$为连线$vecO_1p_1$和连线$O_2p_2$的交点。$O_1O_2P$为**极平面**。
+
+下式(1)和(2)都称为**对极约束**，其中$x_1,x_2$是两个像素点$p_1,p_2$的归一化平面上的坐标，将$x_1=K^{-1}p_1, x_2=K^{-1}p_2$代入(1)，得(2)。
+
+$
+x^T_2t^\wedge Rx_1=0
+\tag{1}
+$
+
+$
+p^T_2K^{-T}t^\wedge RK^{-1}p_1=0
+\tag{2}
+$
+
+**对极约束的几何意义**：$x_2$、t、$Rx_1$三者混合积为0，表示这三个向量共面，即上图中三角形的三边共面（极平面）。[参考](https://www.cnblogs.com/clarenceliang/p/6704970.html)
