--- a/_posts/2022-11-25-ORB-SLAM1.md
+++ b/_posts/2022-11-25-ORB-SLAM1.md
@@ -7,7 +7,7 @@ author:     "ZhouSh"
 header-img: "img/in_post/ORB-SLAM1/head.png"
 header-mask: 0.3
 tags:
-    - SLAM
+    - SLAM论文
 ---
 
 论文：[ORB-SLAM: a Versatile and Accurate Monocular SLAM System](https://arxiv.org/pdf/1502.00956.pdf)
