--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -15,10 +15,10 @@ tags:
 
 ### [7.1.2 ORB特征](https://zhoushihui210.github.io/2022/11/23/ORB-feature/)
 
-## 7.3 2D-3D：对极几何
+## 7.3 2D-3D: 对极几何
 
 ### 7.3.1 对极约束
-<img src="/img/in_post/SLAM14/7/1.png" width="50%">
+![img](/img/in_post/SLAM14/7/1.png)
 
 我们希望求两帧图像$l_1$,$l_2$之间的运动。设第一帧$l_1$到第二帧$l_2$的运动为$R,t$，两个相机中心分别为$O_1,O_2$。考虑$l_1$中一特征点$p_1$，在$l_2$中对应着特征点$p_2$。$P$为连线$vecO_1p_1$和连线$O_2p_2$的交点。$O_1O_2P$为**极平面**。
 
@@ -35,3 +35,124 @@ p^T_2K^{-T}t^\wedge RK^{-1}p_1=0
 $
 
 **对极约束的几何意义**：$x_2$、t、$Rx_1$三者混合积为0，表示这三个向量共面，即上图中三角形的三边共面（极平面）。[参考](https://www.cnblogs.com/clarenceliang/p/6704970.html)
+
+我们把中间部分记作基础矩阵F（Fundamental Matrix）和本质矩阵E（Essential Matrix），于是可以进一步简化对极约束：
+
+$
+E=t^\wedge R,\ \ \ \ \ \ F=K^{-T}EK^{-1}
+\tag{3}
+$
+
+$
+x^T_2Ex_1=p^T_2Fp_1=0
+\tag{4}
+$
+
+对极约束简洁地给出了两个匹配点的空间位置关系，于是相机位姿估计问题变为以下两步：
+1. 根据配对点的像素位置求出E或F
+2. 根据E或F求出$R,t$（由于E和F只差了已知的相机内参，所以往往用形式更简单的E）
+
+### 7.3.2 本质矩阵
+
+本质矩阵E的性质：
+1. **E的尺度等价性**：本质矩阵是由对极约束定义的。由于对极约束是等式为零的约束，所以E乘以任意非零常数后，对极约束依然满足。
+2. **E的内在性质**：根据$E=t^\wedge R$，可以证明E的奇异值必定是$[\sigma,\sigma,0]^T$的形式。
+3. **E有5个自由度**：由于平移和旋转各有3个自由度，故$t^\wedge R$共有6个自由度，但由于尺度等价性，故E实际上有5个自由度
+
+> [奇异值](https://baike.baidu.com/item/%E5%A5%87%E5%BC%82%E5%80%BC/9975162)：设A为$m\*n$阶矩阵，q=min(m,n)，$A\*A$的q个非负特征值的算术平方根叫作A的奇异值。
+
+根据本质矩阵E计算相机的运动$R,t$，是由奇异值分解（SVD）得到的。设E的SVD分解为（5），其中$U,V$为正交阵，$\Sigma$为奇异值矩阵。根据E的内在性质，$\Sigma=diag(\sigma,\sigma,0$。
+
+$
+E=U\Sigma V^T
+\tag{5}
+$
+
+在SVD分解中，对于任意一个E，存在两个可能的$R,t$与它对应（6）（7）。其中$R_Z(\frac\pi2)$表示沿Z轴旋转$90^o$得到的旋转矩阵。由于-E和E等价，所以对任意一个t取负号，也会得到同样的结果。所以从E分解得到$R,t$，一共存在4个可能的解。
+
+$
+t^\wedge_1=UR_Z(\frac\pi2)\Sigma U^T,\ \ \ \ \ \ R_1=UR^T_Z(\frac\pi2)V^T
+\tag{6}
+$
+
+$
+t^\wedge_2=UR_Z(-\frac\pi2)\Sigma U^T,\ \ \ \ \ \ R_2=UR^T_Z(-\frac\pi2)V^T
+\tag{7}
+$
+
+![img](/img/in_post/SLAM14/7/2.png)
+
+4个可能的解如上图P点，不过只有第一种解中，P在两个相机中都具有正的深度。因此只要把任意一点代入4种解中，检测该点在两个相机下的深度，就可以确定哪个解是正确的了。
+
+但是根据线性方程解出的E可能不满足E的内在性质，即它的奇异值不一定为$[\sigma,\sigma,0]^T$的形式。所以在做SVD时会刻意把$\Sigma$矩阵调整成$[\sigma,\sigma,0]^T$形式。通常的做法是，对八点法求得的E进行SVD分解后，得到奇异值矩阵$\Sigma=diag(\sigma_1,\sigma_2,\sigma_3)$，不妨设$\sigma_1\geq\sigma_2\geq\sigma_3$，取式(8)。这相当于把求出来的矩阵投影到E所在的流形上。
+
+$
+E=Udiag(\frac{\sigma_1+\sigma_2}2,\frac{\sigma_1+\sigma_2}2,0)V^T
+\tag{8}
+$
+
+当然，更简洁的做法是将奇异值矩阵取成$diag(1,1,0)$，因为E具有尺度等价性，所以这样做也是合理的。
+
+### 7.3.3 单应矩阵
+
+**单应矩阵H**（Homography）描述了两个平面之间的映射关系。若场景中的特征点都落在同一平面上（如墙、地面等），则可以通过单应性进行运动估计。在无人机携带的俯视相机或扫地机携带的顶视相机中比较常见。
+
+单应矩阵通常描述处于共同平面上的一些点在两张图像之间的变换关系。考虑在图像$l_1$和$l_2$有一对匹配好的特征点$p_1$和$p_2$，这些特征点落在平面P上，设这个平面满足方程（9），整理得（10）。其中n为平面法向量，d为相机系原点到平面距离。
+
+$
+n^TP+d=0
+\tag{9}
+$
+
+$
+-\frac{n^TP}d=1
+\tag{10}
+$
+
+由于$x_1=K^{-1}p_1, x_2=K^{-1}p_2$，得：
+
+$
+p_2=K(RP+t)=K(RP+t(-\frac{n^TP}d))=K(R-\frac{tn^T}d)P=K(R-\frac{tn^T}d)K^{-1}p_1
+\tag{11}
+$
+
+把中间这部分记为H，于是得到一个直接描述图像坐标$p_1$和$p_2$之间的变换：
+
+$
+p_2=Hp_1
+\tag{12}
+$
+
+当**特征点共面**或者相机发生**纯旋转**时，基础矩阵的**自由度下降**，这就出现了所谓的**退化**（degenerate）。现实中的数据总包含一些噪声，这时候如果继续使用八点法求解基础矩阵，基础矩阵多余出来的自由度将会主要由噪声决定。为了能够避免退化现象造成的影响，通常我们会同时估计基础矩阵F和单应矩阵H，选择重投影误差比较小的那个作为最终的运动估计矩阵。
+
+## 7.5 三角测量
+
+<img src="/img/in_post/SLAM14/7/3.png" width="60%">
+
+**三角测量**是指，通过在两处观察同一个点的夹角，从而确定该点的距离。
+
+按照对极几何中的定义，设$x_1,x_2$为两个特征点的归一化坐标，则满足（13）。已知$R,t$，想要求解两个特征点的深度$s_1,s_2$。当然，这两个深度可以分开求，比如要算$s_2$，则先对（13）两侧左乘$x^\wedge_1$，得（14）。该式左侧为0，右侧可看成$s_2$的方程。
+
+$
+s_1x_1=s_2Rx_2+t
+\tag{13}
+$
+
+$
+s_1x^\wedge_1x_1=0=s_2x^\wedge_1Rx_2+x^\wedge_1t
+\tag{14}
+$
+
+由于噪声，我们估得的$R,t$不一定使（13）为零，所以更常见的做法是求**最小二乘解**而不是零解。
+
+三角测量是平移得到的，**纯旋转无法使用三角测量**，因为对极约束将永远满足。
+
+## 7.7 3D-2D: PnP
+
+**PnP**(Perspective-n-Point)是求解3D到2D点对运动的方法，它描述了当知道n个3D空间点及其投影位置时，如何估计相机的位姿。
+
+前面说到，2D-2D的对极几何方法需要8个以上的点对（以八点法为例），且存在着初始化、纯旋转和尺度的问题。然而，如果两张图像中其中一张特征点的3D位置已知，那么最少只需3个点对（需要至少一个额外点验证结果）就可以估计相机运动。
+
+PnP问题有很多种求解方式：**P3P**（3对点估计位姿）、**DLT**（直接线性变换）、**EPnP**（EfficientPnP）、**UPnP**、**BA**（Bundle Adjustment）等等。
+
+### 7.7.1 直接线性变换
