update post SLAM14-7

--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -151,8 +151,95 @@ $
 
 **PnP**(Perspective-n-Point)是求解3D到2D点对运动的方法，它描述了当知道n个3D空间点及其投影位置时，如何估计相机的位姿。
 
-前面说到，2D-2D的对极几何方法需要8个以上的点对（以八点法为例），且存在着初始化、纯旋转和尺度的问题。然而，如果两张图像中其中一张特征点的3D位置已知，那么最少只需3个点对（需要至少一个额外点验证结果）就可以估计相机运动。
+前面说到，2D-2D的对极几何方法需要8个以上的点对（以八点法为例），且存在着初始化、纯旋转和尺度的问题。然而，如果两张图像中其中一张特征点的**3D位置**已知，那么最少只需3个点对（需要至少一个额外点验证结果）就可以估计相机运动。
+
+特征点的3D位置可以由三角化或者RGB-D相机的深度图确定。因此，在双目或RGB-D的视觉里程计中，我们可以直接使用PnP估计相机运动。而在单目视觉里程计中，必须先进行**初始化**，然后才能使用PnP。
 
 PnP问题有很多种求解方式：**P3P**（3对点估计位姿）、**DLT**（直接线性变换）、**EPnP**（EfficientPnP）、**UPnP**、**BA**（Bundle Adjustment）等等。
 
 ### 7.7.1 直接线性变换
+
+考虑某个空间点 $P=(X,Y,Z,1)^T$，在图像$l_1$中投影到特征点 $x_1=(u_1,v_1,1)^T$，定义增广矩阵$[R\|t]$为一个$3\times4$的矩阵，展开形式如下：
+<img src="/img/in_post/SLAM14/7/4.png" width="35%">
+
+用最后一行把s消去，得到两个约束（15）。为了简化表示，定义T的行向量（16）。
+
+$
+u_1=\frac{t_1X+t_2Y+t_3Z+t_4}{t_9X+t_{10}Y+t_{11}Z+t_{12}}\ ,\ v_1=\frac{t_5X+t_6Y+t_7Z+t_8}{t_9X+t_{10}Y+t_{11}Z+t_{12}}
+\tag{15}
+$
+
+$
+t_1=(t_1,t_2,t_3,t_4)^T\ ,\ t_2=(t_5,t_6,t_7,t_8)^T\ ,\ t_3=(t_9,t_{10},t_{11},t_{12})^T
+\tag{16}
+$
+
+于是有（17）和（18）：
+
+$
+t^T_1P-t^T_3Pu_1=0
+\tag{17}
+$
+
+$
+t^T_2P-t^T_3Pv_1=0
+\tag{18}
+$
+
+t是待求的变量，每个特征点提供了2个关于t的线性约束。假设共有N个特征点，则可以列出如下线性方程组。由于t一共12维，因此最少通过6对匹配点即可实现矩阵T的线性求解，这种方法称为**直接线性变换**（Direct Linear Transform，**DLT**）。当匹配点大于6对时，也可以用**SVD**等方法对超定方程求最小二乘解。
+<img src="/img/in_post/SLAM14/7/5.png" width="35%">
+
+在DLT求解中，我们直接将T矩阵看成了12个未知数，忽略了它们之间的联系。因为旋转矩阵$R\in SO(3)$，用DLT求出的解不一定满足该约束，它是一个一般矩阵。对于旋转矩阵R，我们必须针对DLT估计的T左边$3\times3$的矩阵块，寻找一个最好的旋转矩阵对它进行近似，这可以由**QR分解**完成。相当于把结果从矩阵空间重新投影到$SE(3)$流形上，转换成旋转和平移两部分。
+
+### 7.7.2 P3P
+
+输入3对3D-2D匹配点，记3D点为A，B，C（在世界坐标系中的坐标），他们在相机成像平面上投影的2D点为a，b，c，如下图所示。此外，P3P还需要一对验证点，用于从可能解中选出正确的那一个，记验证点对为D-d，相机光心为O。
+<img src="/img/in_post/SLAM14/7/6.png" width="40%">
+由余弦定理，得
+$
+OA^2+OB^2-2OA\cdot OB\cdot cos<a,b>=AB^2
+\tag{19}
+$
+
+$
+OB^2+OC^2-2OB\cdot OC\cdot cos<b,c>=BC^2
+\tag{20}
+$
+
+$
+OA^2+OC^2-2OA\cdot OC\cdot cos<a,c>=AC^2
+\tag{21}
+$
+
+对以上三式除以$OC^2$，并记$x=\frac{OA}{OC}$，$y=\frac{OB}{OC}$，$v=\frac{AB^2}{OC^2}$，$uv=\frac{BC^2}{OC^2}$，$wv=\frac{AC^2}{OC^2}$，得
+
+$
+x^2+y^2-2xycos<a,b>-v=0
+\tag{22}
+$
+
+$
+y^2+1^2-2ycos<b,c>-uv=0
+\tag{23}
+$
+
+$
+x^2+1^2-2xcos<a,c>-wv=0
+\tag{24}
+$
+
+将式（22）中的v放到等式一边，代入后两式（23）（24），得（25）（26）。该方程组是x,y的二元二次方程，其他均已知。解析求解需要用**吴消元法**，较为复杂，最多可能得到4个解，可以用**验证点**计算最可能的解。得到ABC在**相机坐标系**下的3D坐标，然后根据3D-3D点对，计算**相机运动R,t**。
+
+$
+(1-u)y^2-ux^2-cos<b,c>y+2uxy\ cos<a,b>+1=0
+\tag{25}
+$
+
+$
+(1-w)x^2-wy^2-cos<a,c>x+2wxy\ cos<a,b>+1=0
+\tag{26}
+$
+
+### 7.7.3 Bundle Adjustment
+
+除了使用线性方法之外，我们还可以把PnP问题构建成一个定义于**李代数**上的**非线性最小二乘问题**。前面说的线性方法，往往是先求相机位姿，再求空间点位置 ，而非线性优化则是把它们都看成优化变量，放在一起优化。
