--- a/_posts/2022-12-9-SLAM14-3.md
+++ b/_posts/2022-12-9-SLAM14-3.md
@@ -16,7 +16,7 @@ tags:
 **内积**可以描述向量间的投影关系
 
 $
-a\cdot b=a^Tb=\Sigma^3_{i=1}a_ib_i=\|a\|\|b\|cos<a,b>
+a\cdot b=a^Tb=\sum^3_{i=1}a_ib_i=\|a\|\|b\|cos<a,b>
 $
 
 **外积**的方向垂直于这两个向量，大小为$\|a\|\|b\|sin<a,b>$ ，是两个向量张成的四边形的有向面积
