--- a/_posts/2023-01-10-SLAM14-6.md
+++ b/_posts/2023-01-10-SLAM14-6.md
@@ -96,7 +96,7 @@ $
 
 那么整个SLAM的误差平方和为
 $$\begin{eqnarray}
-J(x)=\Sigma_ke^T_{v,k}R^{-1}_ke_{v,k}+\Sigma_k\Sigma_je^T_{y,k,j}Q^{-1}_{k,j}e_{y,k,j}
+J(x)=\sum_ke^T_{v,k}R^{-1}_ke_{v,k}+\sum_k\sum_je^T_{y,k,j}Q^{-1}_{k,j}e_{y,k,j}
 \tag{12}\end{eqnarray}$$
 
 ## 6.2 非线性最小二乘
