--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -243,3 +243,90 @@ $
 ### 7.7.3 Bundle Adjustment
 
 除了使用线性方法之外，我们还可以把PnP问题构建成一个定义于**李代数**上的**非线性最小二乘问题**。前面说的线性方法，往往是先求相机位姿，再求空间点位置 ，而非线性优化则是把它们都看成优化变量，放在一起优化。
+
+在PnP中，Bundle Adjustment是一个**最小化重投影误差**问题。
+
+考虑n个三维空间点P及其投影p，我们希望计算相机的位姿R,t，它的李代数表示为$\xi$。假设某空间点坐标为$P_i=[X_i,Y_i,Z_i]^T$，其投影的像素坐标为$u_i=[u_i,v_i]^T$。根据第5讲（相机与图像）的内容，像素位置与空间点位置关系如下：
+<img src="/img/in_post/SLAM14/7/7.png" width="35%">
+写成矩阵形式就是(27)。由于相机位姿未知及观测点的噪声，该等式存在一个误差。因此我们把误差求和，构建最小二乘问题，然后寻求最好的相机位姿，使它最小化(28)。
+
+$
+s_iu_i=K\ exp(\xi ^\wedge)P_i
+\tag{27}$
+
+$
+\xi^*=arg\ min_\xi\frac12\sum^n_{i=1}\|\|u_i-\frac1{s_i}K\ exp(\xi^\wedge)P_i\|\|^2_2
+\tag{28}
+$
+
+该问题的误差项，是将像素坐标（观测到的投影位置）与3D点按照当前估计的位姿进行投影得到的位置相比得到的误差，所以称为**重投影误差**。
+
+## 7.9 3D-3D: ICP
+
+假设我们有一组配对好的3D点：$P=\{p_1,\cdots,p_n\},\ P'=\{p'_1,\cdots,p'_n\}$，我们想要找一个欧氏变换，使得：$\forall i,\ p_i=Rp'_i+t$。这个问题可以用**迭代最近点**（Iterative Closest Point，**ICP**）求解。和PnP类似，ICP的求解也分为两种方式：利用线性代数的求解（主要是SVD），利用非线性优化方式的求解（类似于Bundle Adjustment）。
+
+### 7.9.1 SVD方法
+
+定义第i对点的误差项（29），然后构建最小二乘问题，求使误差平方和达到极小的R,t（30）。
+
+$
+e_i=p_i-(Rp'_i+t)
+\tag{29}
+$
+
+$
+min_{R,t}\ J=\frac12\sum^n_{i=1}\|\|(p_i-(Rp'_i+t))\|\|^2_2
+\tag{30}
+$
+
+ICP可以分为以下3个步骤求解：
+1. 计算两组点的质心位置$p,p'$，然后计算每个点的**去质心坐标**：$q_i=p_i-p,\ q'_i=p'_i-p'$
+2. 根据以下优化问题计算旋转矩阵：$R^*=arg\ min_R\frac12\sum^n_{i=1}\|\|q_i-Rq'_i\|\|^2$
+3. 根据第2步的R计算t：$t^*=p-Rp'$
+
+重点是R的计算，展开关于R的误差项，得（31）。其中第一项和R无关，第二项由于$R^TR=I$，也和R无关，因此实际上优化目标变为（32）。
+
+$$\begin{equation}
+\frac12\sum^n_{i=1}\|\|q_i-Rq'_i\|\|^2=\frac12\sum^n_{i=1}q^T_iq_i+q'^T_iR^TRq'_i-2q^T_iRq'_i
+\tag{31}
+\end{equation}$$
+
+$$\begin{equation}
+\sum^n_{i=1}-2q^T_iRq'_i=\sum^n_{i=1}-tr(Rq'_iq^T_i)=-tr(R\sum^n_{i=1}q'_iq^T_i)
+\tag{32}
+\end{equation}$$
+
+接下来介绍怎样通过SVD解出上述问题中最优的R。先定义矩阵（33），W是一个$3\times3$的矩阵，对W进行SVD分解，得（34）。其中，$\Sigma$为奇异值组成得对角矩阵，对角原色从大到小排列，而U和V为对角矩阵。当W满秩时，R为（35），解得R后，按步骤3求解t即可。
+
+$
+W=\sum^n_{i=1}q_iq'^T_i
+\tag{33}
+$
+
+$
+W=U\Sigma V^T
+\tag{34}
+$
+
+$
+R=UV^T
+\tag{35}
+$
+
+### 7.9.2 非线性优化方法
+
+非线性优化以迭代得方式去找最优值，与PnP非常相似。以李代数表达位姿时，目标函数可以写成（36）。单个误差项关于位姿的导数在前面已推导（书中有，笔记没有），使用李代数扰动模型即可（37）。
+
+$
+min_\xi=\frac12\sum^n_{i=1}\|\|(p_i-exp(\xi^\wedge)p'_i)\|\|^2_2
+\tag{36}
+$
+
+$
+\frac{\partial e}{\partial\delta\xi}=-(exp(\xi^\wedge)p'_i)^\odot
+\tag{37}
+$
+
+于是在非线性优化中只需不断迭代，就能找到极小值。ICP问题存在唯一解或无穷多解的情况。在唯一解的情况下，只要能找到极小值解，那么这个极小值解就是全局最优值，因此不会遇到局部极小值而非全局最小的情况。这意味着ICP求解可以任意选定初始值，这是已匹配点时求解ICP的一大好处。
+
+需要说明的是，我们这里讲的ICP是指**已由图像特征给定了匹配**的情况下进行位姿估计的问题。在匹配已知的情况下，这个最小二乘问题实际上具有解析解，所以并没有必要进行迭代优化。ICP的研究者们往往更加关心**匹配未知**的情况。不过，在RGB-D SLAM中，由于一个像素的深度数据可能测量不到，所以我们可以混合着使用PnP和ICP优化：对于深度已知的特征点，建模它们的3D-3D误差；对于深度未知的特征点，则建模3D-2D的重投影误差。于是，可以将所有的误差放在同一个问题中考虑，使得求解更加方便。
