update post SLAM14-7

--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -36,7 +36,7 @@ $
 
 **对极约束的几何意义**：$x_2$、t、$Rx_1$三者混合积为0，表示这三个向量共面，即上图中三角形的三边共面（极平面）。[参考](https://www.cnblogs.com/clarenceliang/p/6704970.html)
 
-我们把中间部分记作基础矩阵F（Fundamental Matrix）和本质矩阵E（Essential Matrix），于是可以进一步简化对极约束：
+我们把中间部分记作**基础矩阵F**（Fundamental Matrix）和**本质矩阵E**（Essential Matrix），于是可以进一步简化对极约束：
 
 $
 E=t^\wedge R,\ \ \ \ \ \ F=K^{-T}EK^{-1}
@@ -61,7 +61,7 @@ $
 
 > [奇异值](https://baike.baidu.com/item/%E5%A5%87%E5%BC%82%E5%80%BC/9975162)：设A为$m\*n$阶矩阵，q=min(m,n)，$A\*A$的q个非负特征值的算术平方根叫作A的奇异值。
 
-根据本质矩阵E计算相机的运动$R,t$，是由奇异值分解（SVD）得到的。设E的SVD分解为（5），其中$U,V$为正交阵，$\Sigma$为奇异值矩阵。根据E的内在性质，$\Sigma=diag(\sigma,\sigma,0$。
+根据本质矩阵E计算相机的运动$R,t$，是由奇异值分解（SVD）得到的。设E的SVD分解为（5），其中$U,V$为正交阵，$\Sigma$为奇异值矩阵。根据E的内在性质，$\Sigma=diag(\sigma,\sigma,0)$。
 
 $
 E=U\Sigma V^T
