--- a/_posts/2023-02-15-SLAM14-8.md
+++ b/_posts/2023-02-15-SLAM14-8.md
@@ -50,3 +50,16 @@ $
 这是一个关于u,v 的超定线性方程，传统解法是求最小二乘解。最小二乘在很多时候都用到过：<img src="/img/in_post/SLAM14/8/5.png" width="30%">
 
 这样就得到了像素在图像间的运动速度$u,v$。当t 取离散的时刻而不是连续时间时，我们可以估计某块像素在若干个图像中出现的位置。由于像素梯度仅在局部有效，所以如果一次迭代不够好，我们会多迭代几次这个方程。
+
+## 8.4 直接法
+
+直接法是从光流演变而来的，他们非常相似，具有相同的假设条件。光流描述了像素在图像中的运动，而直接法则附带着一个相机运动模型。
+
+考虑某个空间点P在两个时刻的相机上成像，记非其次像素坐标为$p_1,p_2$，我们的目标是求第一个相机到第二个相机的相对位姿变换。在特征点法中，由于通过匹配描述子知道了$p_1,p_2$的像素位置，所以可以计算重投影的位置。但在直接法中，由于没有特征匹配，我们无从知道哪一个$p_1$和$p_2$对应着同一个点。
+
+直接法的思路是根据当前相机的位姿估计值来寻找$p_2$的位置。但若相机位姿不够好，$p_2$的外观和$p_1$会有明显的差别。为了减小这一差别，我们优化相机的位姿，来寻找与$p_1$更相似的$p_2$。这同样可以通过解一个优化问题完成，但此时最小化的不是重投影误差，而是**基于灰度不变假设**的**光度误差**（Photometric Error），也就是P的两个像素的亮度误差：
+
+$
+e=I_1(p_1)-I_2(p_2)
+\tag{5}
+$
