update post SLAM14-8

--- a/_posts/2023-02-15-SLAM14-8.md
+++ b/_posts/2023-02-15-SLAM14-8.md
@@ -55,11 +55,35 @@ $
 
 直接法是从光流演变而来的，他们非常相似，具有相同的假设条件。光流描述了像素在图像中的运动，而直接法则附带着一个相机运动模型。
 
-考虑某个空间点P在两个时刻的相机上成像，记非其次像素坐标为$p_1,p_2$，我们的目标是求第一个相机到第二个相机的相对位姿变换。在特征点法中，由于通过匹配描述子知道了$p_1,p_2$的像素位置，所以可以计算重投影的位置。但在直接法中，由于没有特征匹配，我们无从知道哪一个$p_1$和$p_2$对应着同一个点。
+考虑某个空间点P在两个时刻的相机上成像，记非齐次像素坐标为$p_1,p_2$，我们的目标是求第一个相机到第二个相机的相对位姿变换。在特征点法中，由于通过匹配描述子知道了$p_1,p_2$的像素位置，所以可以计算重投影的位置。但在直接法中，由于没有特征匹配，我们无从知道哪一个$p_1$和$p_2$对应着同一个点。
 
-直接法的思路是根据当前相机的位姿估计值来寻找$p_2$的位置。但若相机位姿不够好，$p_2$的外观和$p_1$会有明显的差别。为了减小这一差别，我们优化相机的位姿，来寻找与$p_1$更相似的$p_2$。这同样可以通过解一个优化问题完成，但此时最小化的不是重投影误差，而是**基于灰度不变假设**的**光度误差**（Photometric Error），也就是P的两个像素的亮度误差：
+直接法的思路是根据当前相机的位姿估计值来寻找$p_2$的位置。但若相机位姿不够好，$p_2$的外观和$p_1$会有明显的差别。为了减小这一差别，我们优化相机的位姿，来寻找与$p_1$更相似的$p_2$。这同样可以通过解一个优化问题完成，但此时最小化的不是重投影误差，而是**基于灰度不变假设**的**光度误差**（Photometric Error），也就是P的两个像素的亮度误差（5）。优化目标为该误差的二范数（6），其中$\xi$为相机位姿。
 
 $
 e=I_1(p_1)-I_2(p_2)
 \tag{5}
 $
+
+$
+\min_\xi J(\xi)=\|\|e\|\|^2
+\tag{6}
+$
+
+在直接法中，我们假设一个空间点在各个视角下成像的灰度是不变的。我们有N个空间点$P_i$，那么整个相机位姿估计问题变为：
+
+$
+\min_\xi J(\xi)=\sum^N_{i=1}e^T_ie_i,\ \ e_i=I_1(p_{1,i})-I_2(p_{2,i})
+\tag{7}
+$
+
+使用李代数上的扰动模型，可推导得误差相对于李代数的雅可比矩阵（8）。然后使用高斯牛顿法或列文伯格-马夸尔特法计算增量，迭代求解。
+
+$
+J=-\frac{\partial I_2}{\partial u}\frac{\partial u}{\partial \delta \xi}
+\tag{8}
+$
+
+上述P是一个已知位置的空间点，根据P的来源，可以把直接法分成3类。
+1. P来自稀疏关键点，称为稀疏直接法
+2. P来自部分像素，称为半稠密的直接法
+3. P为所有像素，称为稠密直接法
