--- a/_posts/2023-01-14-Cpp-Primer1.md
+++ b/_posts/2023-01-14-Cpp-Primer1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "C++ Primer 笔记"
-subtitle: "第5版 C++11"
+title:  "C++ Primer：C++基础"
+subtitle: "第一部分"
 date:   2023-1-14 16:21:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/Cpp-Primer/head.png"
@@ -187,25 +187,25 @@ int main()
 
 **构造函数不能被声明成const**，当我们创建类的一个const对象时，直到构造函数完成初始化过程，对象才能真正取得其“常量”属性。因此，构造函数在const对象的构造过程中可以向其写值。
 
-class的成员默认为private，struct的成员默认为public。使用class和struct定义类唯一的区别就是默认的访问权限。
+class的成员默认为private，struct的成员默认为public。使用**class和struct**定义类唯一的区别就是**默认的访问权限**。
 
-类可以允许其他类或者函数访问它的非公有成员，方法是令其他类或者函数成为它的友元（friend）。如果类想把一个函数作为它的友元，只需要增加一条以friend关键字开始的函数声明语句即可。
+类可以允许其他类或者函数访问它的非公有成员，方法是令其他类或者函数成为它的**友元**（friend）。如果类想把一个函数作为它的友元，只需要增加一条以**friend**关键字开始的函数声明语句即可。
 
-友元的声明仅仅指定了访问的权限，而非一个通常意义上的函数声明。如果我们希望类的用户能够调用某个友元函数，那么我们就必须在友元声明之外再专门对函数进行一次声明。
+**友元的声明仅仅指定了访问的权限，而非一个通常意义上的函数声明**。如果我们希望类的用户能够调用某个友元函数，那么我们就必须在友元声明之外再专门对函数进行一次声明。
 
 为了使友元对类的用户可见，我们通常把友元的声明与类本身放置在同一个头文件中（类的外部）。
 
 **定义**（不是声明）在类内部的成员函数是自动**inline**的。
 
-若希望在const成员函数内修改某个数据成员，可以通过在变量的声明中加入**mutable**关键字。
+若希望在**const成员函数**内修改某个数据成员，可以通过在变量的声明中加入**mutable**关键字。
 
-一个类的成员类型不能是该类自己，但可以是该类自己的指针或引用。因为只有当类成员全部完成后类才算被定义。但一个类的名字出现后，它就被认为是声明过了，只要类被声明过，就可以定义指针或引用指向它。
+**一个类的成员类型不能是该类自己，但可以是该类自己的指针或引用**。因为只有当类成员全部完成后类才算被定义。但一个类的名字出现后，它就被认为是声明过了，只要类被声明过，就可以定义指针或引用指向它。
 
 友元函数能定义在类的内部，这样的函数是隐式内联的。
 
 如果一个类指定了友元类，则友元类的成员函数可以访问此类包括非公有成员在内的所有成员。`friend class A;`
 
-友元关系不存在传递性。
+**友元关系不存在传递性**。
 
 尽管重载函数的名字相同，但它们仍然是不同的函数。因此，如果一个类想把一组重载函数声明成它的友元，它需要对这组函数中的每一个分别声明。
 
@@ -240,13 +240,13 @@ int main() {
 
 **explicit**关键字可以抑制构造函数定义的隐式转换。将上述构造函数改为`explicit A(int n){};`，则会编译报错：`error: no matching function for call to ‘A::add(int&)’`
 
-类的静态成员：在成员的声明之前加上关键字static使得其与类关联在一起，而与每个对象无关。
+**类的静态成员**：在成员的声明之前加上关键字**static**使得其与类关联在一起，而与每个对象无关。
 
-因为静态数据成员不属于类的任何一个对象，所以它们并不是在创建类的对象时被定义的。这意味着它们不是由类的构造函数初始化的。而且一般来说，我们不能在类的内部初始化静态成员。相反的，必须在类的外部定义和初始化每个静态成员。和其他对象一样，一个静态数据成员只能定义一次。
+因为静态数据成员不属于类的任何一个对象，所以它们并不是在创建类的对象时被定义的。这意味着它们不是由类的构造函数初始化的。而且一般来说，我们不能在类的内部初始化静态成员。相反的，**必须在类的外部定义和初始化每个静态成员**。和其他对象一样，一个静态数据成员只能定义一次。
 
 类似于全局变量，静态数据成员定义在任何函数之外。因此一旦它被定义，就将一直存在于程序的整个生命周期中。
 
-通常情况下，类的静态成员不应该在类的内部初始化。然而，我们可以为静态成员提供const整数类型的类内初始值，不过要求静态成员必须是字面值常量类型的constexpr。
+通常情况下，类的静态成员不应该在类的内部初始化。然而，我们可以为静态成员提供**const整数类型的类内初始值**，不过要求静态成员必须是字面值常量类型的**constexpr**。
 ```
 class A{
   static constexpr int period = 30;
