--- a/_posts/2022-12-8-SLAM14-1-2.md
+++ b/_posts/2022-12-8-SLAM14-1-2.md
@@ -45,11 +45,9 @@ SLAM是Simultaneous Localization and Mapping的缩写，中文译作“同时定
 
 轮式编码器会测到轮子转动的角度，IMU测量运动的角速度和加速度。
 
-由于单目相机拍摄的图像只是三维空间的二维投影，所以，如果真想恢复三维结构，必须改变相机的视角。在单目SLAM中也是同样的原理。我们必须移动相机，才能估计它的运动 （Motion），同时估计场景中物体的远近和大小，不妨称之为结构（Structure）。
+由于单目相机拍摄的图像只是三维空间的二维投影，所以，如果真想恢复三维结构，必须改变相机的视角。在单目SLAM中也是同样的原理。我们必须**移动相机，才能估计它的运动**（Motion），同时估计场景中物体的远近和大小，不妨称之为结构（Structure）。
 
-由于单目相机拍摄的图像只是三维空间的二维投影，所以，如果真想恢复三维结构，必须改变相机的视角。在单目SLAM中也是同样的原理。我们必须移动相机，才能估计它的运动 （Motion），同时估计场景中物体的远近和大小，不妨称之为结构 （Structure）
-
-单目SLAM估计的轨迹和地图将与真实的轨迹和地图相差一个因子，也就是所谓的尺度 （Scale） 。由于单目SLAM无法仅凭图像确定这个真实尺度，所以又称为尺度不确定性 。
+单目SLAM估计的轨迹和地图将与真实的轨迹和地图相差一个因子，也就是所谓的尺度（Scale）。由于单目SLAM无法仅凭图像确定这个真实尺度，所以又称为**尺度不确定性**。
 
 平移之后才能计算深度，以及无法确定真实尺度，这两件事情给单目SLAM的应用造成了很大的麻烦。其根本原因是通过单张图像无法确定深度。所以，为了得到这个深度，人们开始使用双目和深度相机。
 
@@ -57,17 +55,17 @@ SLAM是Simultaneous Localization and Mapping的缩写，中文译作“同时定
 
 在离散时刻 $t=1,\cdots,K$，用x表示机器人自身的位置，记为$x_1,\cdots,x_k$。假设地图是由许多个路标（Landmark）组成的，设路标点一共有N个，则记为$y_1,\cdots,y_N$。
 
-什么是运动 ？我们要考虑从k- 1时刻到k 时刻，小萝卜的位置x 是如何变化的。
+什么是**运动**？我们要考虑从k-1时刻到k时刻，小萝卜的位置x是如何变化的。
 
-什么是观测 ？假设小萝卜在k 时刻于$x_k$处探测到了某一个路标$y_j$，我们要考虑这件事情是如何用数学语言来描述的。
+什么是**观测**？假设小萝卜在k时刻于$x_k$处探测到了某一个路标$y_j$，我们要考虑这件事情是如何用数学语言来描述的。
 
-运动方程：$x_k=f(x_{k-1},u_k.w_k)$
+**运动方程**：$x_k=f(x_{k-1},u_k.w_k)\tag{1}$
 
-观测方程：$z_{k,j}=h(y_j,x_k,v_{k,j})$
+**观测方程**：$z_{k,j}=h(y_j,x_k,v_{k,j})\tag{2}$
 
-其中$u_k$是运动传感器读数（输入），$w_k$为噪声。观测方程描述的是，当小萝卜在$x_k$位置上看到某个路标点$y_j$，产生了一个观测数据$z_{k,j}$。
+其中$u_k$是运动传感器读数（输入），$w_k$为噪声。观测方程描述的是，当小萝卜在$x_k$位置上看到某个路标点$y_j$，$v_{k,j}$为噪声，产生了一个观测数据$z_{k,j}$。
 
-这两个方程描述了最基本的SLAM问题：当知道运动测量的读数u ，以及传感器的读数z时，如何求解定位问题（估计x）和建图问题（估计y）？
+这两个方程描述了**最基本的SLAM问题**：当知道运动测量的读数u ，以及传感器的读数z时，如何求解定位问题（估计x）和建图问题（估计y）？
 
 ## 2.4 编程实践
 
