--- a/_posts/2022-12-9-SLAM14-3.md
+++ b/_posts/2022-12-9-SLAM14-3.md
@@ -22,19 +22,21 @@ $
 **外积**的方向垂直于这两个向量，大小为$\|a\|\|b\|sin<a,b>$ ，是两个向量张成的四边形的有向面积
 <img src="/img/in_post/SLAM14/3/1.png" width="95%">
 
-> 对于外积，我们引入了∧符号，把a写成一个矩阵。事实上是一个反对称矩阵（Skew-symmetric），你可以将∧记成一个反对称符号。这样就把外积 $a\times b$ 写成了矩阵与向量的乘法$a∧b$ ，把它变成了线性运算。这个符号将在后文经常用到，请记住它。外积只对三维向量存在定义，我们还能用外积表示向量的旋转。
+> 对于外积，我们引入了∧符号，把a写成一个矩阵。事实上是一个反对称矩阵（Skew-symmetric），你可以将∧记成一个反对称符号。这样就把外积 $a\times b$ 写成了矩阵与向量的乘法$a^∧b$ ，把它变成了线性运算。这个符号将在后文经常用到，请记住它。外积只对三维向量存在定义，我们还能用外积表示向量的旋转。
 
-**旋转矩阵R**是一个行列式为1的正交矩阵。反之，行列式为1的正交矩阵也是一个旋转矩阵。所以，可以把旋转矩阵的集合定义如下：
+**旋转矩阵R**是一个**行列式为1的正交矩阵**。反之，行列式为1的正交矩阵也是一个旋转矩阵。所以，可以把旋转矩阵的集合定义如下：
 <img src="/img/in_post/SLAM14/3/2.png" width="70%">
 
-> 正交矩阵即逆为自身转置的矩阵。
+> **det(R)**表示R矩阵的[行列式](https://zhuanlan.zhihu.com/p/360292803)（determinant），几何意义为列向量所围成的平行四边形的面积。
 >
-> SO(n) 是特殊正交群（Special Orthogonal Group）。这个集合由n维空间的旋转矩阵组成，SO(3)就是三维空间的旋转。
+> **正交矩阵**即逆为自身转置的矩阵。
+>
+> **SO(n)**是特殊正交群（Special Orthogonal Group）。这个集合由n维空间的旋转矩阵组成，SO(3)就是三维空间的旋转。
 
 **变换矩阵T**
 <img src="/img/in_post/SLAM14/3/3.png" width="80%">
 
-> SE(n) 是特殊欧式群（Special Euclidean Group）。
+> **SE(n)**是特殊欧式群（Special Euclidean Group）。
 
 ## 3.3 旋转向量和欧拉角
 
@@ -46,10 +48,11 @@ $
 > 符号∧是向量到反对称的转换符，见式（3.3）
 
 **旋转矩阵转换为旋转向量**：
-转轴n时矩阵R特征值1对应的特征向量，求解$Rn=n$，再归一化，就得到转轴。转角$\theta$：
+转轴n是矩阵R特征值为1时对应的特征向量，求解$Rn=n$，再归一化，就得到转轴。转角$\theta$：
 <img src="/img/in_post/SLAM14/3/5.png" width="60%">
+> tr(R)为矩阵的迹，一个n×n矩阵A的主对角线（从左上方至右下方的对角线）上各个元素的总和被称为矩阵A的迹。
 
-**欧拉角的万向锁问题**：在俯仰角为$\pm90^o$时，第一次旋转与第三次旋转将使用同一个轴，使得系统丢失了一个自由度（由3次旋转变成了2次旋转）。这被称为奇异性问题。（在其他形式的欧拉角中也同样存在）所以欧拉角不适用与插值和迭代，往往只用于人机交互中。
+**欧拉角的万向锁问题**：在俯仰角为$\pm90^o$时，第一次旋转与第三次旋转将使用同一个轴，使得系统丢失了一个自由度（由3次旋转变成了2次旋转）。这被称为**奇异性问题**。（在其他形式的欧拉角中也同样存在）所以欧拉角不适用与插值和迭代，往往只用于人机交互中。
 
 ## 3.4 四元数
 
