--- a/_posts/2023-01-10-SLAM14-6.md
+++ b/_posts/2023-01-10-SLAM14-6.md
@@ -20,7 +20,7 @@ x_k=f(x_{k-1},u_k)+w_k
 
 ## 6.1 状态估计问题
 
-经典SLAM模型由状态方程和运动方程构成：
+经典SLAM模型由运动方程和状态方程构成：
 $
 x_k=f(x_{k-1},u_k)+w_k
 \tag{1}
@@ -70,14 +70,14 @@ $
 \tag{7}
 $
 
-第一项与x无关，舍去，只要最小化右侧的二次型项，就得到对状态的最大似然估计。
+第一项与x无关，舍去，只要最小化右侧的二次型项$(x-\mu)^T\Sigma^{-1}(x-\mu)$，就得到对状态的最大似然估计。
 
 代入SLAM的观测模型，得：
 $$\begin{eqnarray}
 x^*=arg\ min((z_{k,j}-h(x_k,y_j))^TQ^{-1}_{k,j}(z_{k,j}-h(x_k,y_j)))
 \tag{8}\end{eqnarray}$$
 
-代入SLAM的观测模型，得：
+代入SLAM的观运动模型，得：
 $$\begin{eqnarray}
 x^*=arg\ min((x_k-f(x_{k-1},u_k))^TR^{-1}_k(x_k-f(x_{k-1},u_k)))
 \tag{9}\end{eqnarray}$$
