--- a/_posts/2023-02-17-litchi.md
+++ b/_posts/2023-02-17-litchi.md
@@ -4,7 +4,7 @@ title:  "《长安的荔枝》"
 subtitle:   "马伯庸"
 date:   2023-02-17 09:44:00 +0800
 author:     "ZhouSh"
-header-img: "img/bg-little-universe.jpg"
+header-img: "img/bg-guidao9.jpg"
 header-mask: 0.3
 tags:
     - 读书笔记
@@ -14,3 +14,7 @@ tags:
 这本书是从微信读书总榜上淘的，位居第二；全文不到10万字，推荐值95.8%。果然群众的眼睛是雪亮的，全书看下来酣畅淋漓。
 
 令人感动的是，昨晚11：33我在群里说“长安的荔枝，很好看哦，安利！”。龙哥在12：21回复“可恶，一口气看完了”。哈哈哈这才是有效安利呀！
+
+---
+<img src="/img/in_post/reading/lichi.png" width="20%">
+
