--- a/_posts/2023-02-17-litchi.md
+++ b/_posts/2023-02-17-litchi.md
@@ -13,8 +13,70 @@ tags:
 
 这本书是从微信读书总榜上淘的，位居第二；全文不到10万字，推荐值95.8%。果然群众的眼睛是雪亮的，全书看下来酣畅淋漓。
 
-令人感动的是，昨晚11：33我在群里说“长安的荔枝，很好看哦，安利！”。龙哥在12：21回复“可恶，一口气看完了”。哈哈哈这才是有效安利呀！
+令人感动的是，23:33我在群里说“长安的荔枝，很好看哦，安利！”。龙哥在00:21回复“可恶，一口气看完了”。哈哈哈这才是有效安利呀！
 
----
-<img src="/img/in_post/reading/lichi.png" width="20%">
+## 第一章
 
+京中除两市的柜坊之外，要数几座大伽蓝的放贷量最为便捷，谓之“香积钱”。当然，佛法不可沾染铜臭，所以这香积钱的本金唤作“功德”，利息唤作“福报”。李善德拿过这两张借契，从头到尾细细读了一遍，当真是功德深厚，福报连绵。
+> 好讽刺哈哈
+
+“鲜荔枝？您也知道荔枝的物性，一日色变，两日香变，三日味变，无论从哪里运，也赶不及送到长安啊！”
+> 矛盾中心，不可能完成之任务，看后续如何化解
+
+他心存侥幸地摸了摸枕边，敕牒还在，可惜上面“鲜荔枝”三字也在。看来昨天那并不是一个噩梦。他失望地揉了揉眼睛，觉得浑身软绵绵地，毫无力气。明媚的阳光从窗户空隙洒进来，却不能带给他哪怕一点点振奋。
+> 我那时每天早上醒来时也都憾一切不是噩梦，新的白天也只是一个新的延续着昨日的噩梦。一切都很恍惚。
+
+智足以拒谏，言足以饰非。
+> 太聪明的人很容易拒绝别人的建议，太会说话的人总是可以花言巧语遮盖自己的过失。
+
+度支无从计划，藏署无从扼流，比部无从稽查，风宪无从督劾。我等只能眼睁睁看着各路使臣揣着国库的钱，消失在灞桥之外。
+> 看似痛骂，实则暗示好友。
+
+杜甫：“虽说如今的成就也不值一提，但自问比起之前，创作更有方向：我要把这些寂寂无闻的人与事都记下来，不教青史无痕。”
+
+## 第二章
+
+只见蒸汽氤氲，疲惫丝丝缕缕地从四肢百骸冒出，混着油腻的汗垢脱离躯体，漂浮到水面上来。有那么一瞬间，他浑然忘了运送荔枝的烦恼，只想化在桶里再也不出来。
+
+李善德望着消失的黑影们，眼神就像一个穷途末路的赌徒，紧盯着一枚高高抛起尚未落地的骰子。
+
+他不懂官场之术，不谙修辞之道，他这一生熟悉的只有数字，也只信任数字，当危机降临时，他唯一能依靠的，亦只有数字。
+
+从京城到岭南的漫长旅途中，李善德除了记录沿途里程，一直在思考一件事：“荔枝转运的极限在哪里？”无论是刘署令、韩十四还是杜甫，所有人都认为新鲜荔枝太易变质，不可能运到长安。这个结论没错，但太含糊了，没有人能给出一个详尽的回答。事实上，当李善德严肃地深入思考这个问题时，他才发现它复杂得惊人。什么品种的荔枝更耐变质？何时采摘为宜？用飞骑转运，至少要多快的速度？与荔枝重量有何关系？飞骑是用稳定性更好的蜀马、滇马，还是用速度更快的云中马、河套马？是走梅关道入江西，还是走西京道入湖南？是顺江上溯至鄂州，还是直上汴州？倘若水陆交替，路线如何设计最能发挥运力？每一条路，在荔枝腐坏前最远可以抵达何处？从荔枝品种到储存方式，从转运载具到转运路线，从气候水文到驿站调度，无数变量彼此交错，衍生出恒河沙数的组合可能。李善德在途中就意识到，这件事要搞明白，纸面计算无用，必须做一次试验才能廓清。
+
+**就算失败，我也想知道，自己倒在距离终点多远的地方。**
+
+## 第三章
+
+这种人其实最讨厌，就像蚊子一样，一巴掌就能拍死，但流出的是你的血。
+
+天下熙熙，皆为利来；天下攘攘，皆为利往。
+
+荔枝荔枝，莫非本字就是劙枝？劙者，吕支切，音离，其意为斫也、解也、砍也。先贤起这个名字，果然是有深意的！
+
+## 第五章
+
+流程那种东西，是弱者才要遵循的规矩。
+
+两百贯对百姓来说，是一世积蓄，对招福寺来说，只是做一次人情的成本罢了。
+> 普通人辛劳一生，不及权贵一次人情。
+
+李善德是做过冰政的人，很了解这个体系的秉性。每到夏日，上头说要一块冰，中间为求安全，会按十块来调拨。下头执行的人为了更安全，总得备出二十块才放心。**层层加码，步步增量**，至于是否会造成浪费，并没人关心。
+
+所以右相要三十丛荔枝，到了都省就会增加到五十丛，转到经略府，就会变成一百丛，办事的人再留出些余量，至少也会截出两百丛。李善德无法苛责任何人，这与贪腐无关，也与地域无关，而是大唐长久以来的规则。
+
+## 第六章
+
+一骑，只有一骑。
+
+“右相适才说，不劳一文而转运饶足，下官以为大谬！天下钱粮皆有定数，不支于国库，不取于内帑，那么从何而来？只能从黄草驿、岭南荔园榨取，从沿途附户身上征派。取之于民，用之于上，又何谈不劳一文？”
+
+李善德不避不让，目光炯炯：“为相者，该当协理阴阳，权衡万事。荔枝与国家，不知相公心中到底是如何权衡，圣人心中，又觉得孰轻孰重？”
+> 燃起来了！
+
+“我原本以为，把荔枝平安送到京城，从此仕途无量，应该会很开心。可我跑完这一路下来，却发现越接近成功，我的朋友就越少，内心就越愧疚。我本想和从前一样，苟且隐忍一下，也许很快就习惯了。可是我六月一日那天，靠在上好坊的残碑旁，看着那荔枝送进春明门时，发现自己竟一点都不高兴，只有满心的厌恶。那一刻，我忽然明悟了，**有些冲动是苟且不了的，有些心思是藏不住的**。”
+
+御赐的这一篮水果，虽不是什么紫衣金绶，可也比大唐律厉害多了。
+> 极其讽刺。
+
+我嫁的是他，又不是长安。
