update post cpp_primer2

--- a/_posts/2023-01-14-Cpp-Primer1.md
+++ b/_posts/2023-01-14-Cpp-Primer1.md
@@ -4,7 +4,7 @@ title:  "C++ Primer：C++基础"
 subtitle: "第一部分"
 date:   2023-1-14 16:21:00 +0800
 author:     "ZhouSh"
-header-img: "img/in_post/Cpp-Primer/head.png"
+header-img: "img/bg-guidao9.jpg"
 header-mask: 0.2
 tags:
     - C++
