--- a/_posts/2023-02-24-Cpp-Primer2.md
+++ b/_posts/2023-02-24-Cpp-Primer2.md
@@ -4,9 +4,34 @@ title:  "C++ Primer：C++标准库"
 subtitle: "第二部分"
 date:   2023-2-24 10:03:00 +0800
 author:     "ZhouSh"
-header-img: "img/in_post/Cpp-Primer/head.png"
+header-img: "img/bg-guidao9.jpg"
 header-mask: 0.2
 tags:
     - C++
 ---
 ## 八、IO库
+
+**IO对象不能拷贝或赋值**，所以不能将形参或返回类型设置为IO类型，进行IO操作的函数通常以**引用**方式传递和返回流。
+
+文本串可能立即打印出来，但也可能被操作系统保存在缓冲区中，随后再打印。如下代码将先等待3s再打印aaabbb，而不是立即打印aaa再等待3s。
+```
+#include <iostream>
+#include <chrono>
+#include <thread>
+
+int main(){
+    std::cout << "aaa";
+    std::this_thread::sleep_for(std::chrono::seconds(3));
+    std::cout << "bbb";
+}
+```
+
+操作符**endl**换行并刷新缓冲区，**flush**刷新缓冲区但不输出任何额外字符，**ends**向缓冲区插入一个空字符再刷新缓冲区。
+
+默认情况下，对**cerr**是设置unitbuf的，因此写到cerr的内容都是立即刷新的。
+
+**unitbuf**操作符告诉流在接下来的每次写操作后都进行一次flush操作。而**nounitbuf**则重置流，使其恢复使用正常的系统管理的缓冲区刷新机制。
+
+默认情况下，cin和cerr都关联到cout，因此读cin或写cerr都会导致cout的缓冲区被刷新。
+
+如果程序异常终止，输出缓冲区不会被刷新，数据很可能停留在缓冲区中等待打印。所以调试程序时最好在输出语句后都跟上endl。
