--- a/_posts/2023-02-24-Cpp-Primer2.md
+++ b/_posts/2023-02-24-Cpp-Primer2.md
@@ -52,3 +52,25 @@ int main(){
 如果必须在中间位置插入元素，考虑在输入阶段使用list，一旦输入完成，将list中的内容拷贝到一个vector中。
 
 如果你不确定应该使用哪种容器，那么可以在程序中只使用vector和list公共的操作：**使用迭代器**，不使用下标操作，避免随机访问。这样，在必要时选择使用vector或list都很方便。
+
+与内置数组一样，标准库array的大小也是类型的一部分。当定义一个array时，除了指定元素类型，还要指定容器大小。
+
+不能对内置数组类型进行**拷贝**或**对象赋值**操作，但**array**并无此限制
+
+assign操作用参数所指定的元素（的拷贝）替换左边容器中的所有元素。这段代码中对assign的调用将names中的元素替换为迭代器指定的范围中的元素的拷贝。
+```
+list<string> names;
+vector<const char*> oldstyle;
+names.assign(oldstyle.cbegin(), oldstyle.cend());
+```
+
+swap操作交换两个相同类型容器的内容。调用swap之后，两个容器中的元素将会交换,svec1将包含24个string元素，svec2将包含10个string。除array外，交换两个容器内容的操作保证会很快——元素本身并未交换，swap只是交换了两个容器的内部数据结构。
+```
+vector<string> svec1(10);
+vector<string> svec2(24);
+swap(svec1, svec2);
+```
+
+与其他容器不同，对一个**string**调用**swap**会导致**迭代器、引用和指针失效**。
+
+与其他容器不同，**swap**两个**array**会真正交换它们的元素。
