update post SLAM14-10

--- a/_posts/2023-03-07-SLAM14-10.md
+++ b/_posts/2023-03-07-SLAM14-10.md
@@ -17,7 +17,7 @@ tags:
 
 SLAM中的图像有时间上的先后顺序，而SfM中允许使用完全无关的图像。
 
-我们假设状态量和噪声项服从高斯分布——这意味着在程序中只需要储存它们的均值和协方差矩阵即可。
+我们假设状态量和噪声项服从高斯分布——这意味着在程序中只需要储存它们的**均值和协方差矩阵**即可。
 
 由于位姿和路标点都是待估计的变量，我们改变一下记号，令$x_k$为k时刻的所有**未知量**。它包含了当前时刻的**相机位姿与m个路标点**。在这种记号的意义下（虽然与之前稍有不同，但含义是清楚的），写成：$x_k\triangleq\{x_k,y_1,\cdots,y_m \}$。同时，把k时刻的所有**观测**记作$z_k$。于是，运动方程与观测方程的形式可写得更加简洁。这里不会出现y，但我们心里要明白这时x中已经包含了之前的y：
 
@@ -42,7 +42,7 @@ $
 
 由于马尔可夫性，k时刻状态只与k-1时刻有关，与k-1之前的无关。所以可简化为只与$x_{k-1}$和$u_k$有关的形式。
 
-假设系统为线性高斯系统，即运动方程和观测方程可以用线性方程来描述，所有状态和噪声满足高斯分布：
+假设系统为**线性高斯系统**，即运动方程和观测方程可以用**线性**方程来描述，所有状态和噪声满足**高斯**分布：
 
 $
 运动方程：\ \ x_k=Ax_{k-1}+u_k+w_k,\ \ \ \ w_k\sim N(0,R)
@@ -106,7 +106,7 @@ $
 
 ### 10.1.3 非线性系统和EKF
 
-SLAM中的运动方程和观测方程通常是非线性函数，所以在非线性系统中，我们必须取一定的近似，将一个非高斯分布近似成高斯分布。我们希望把卡尔曼滤波器扩展到非线性系统中，称为扩展卡尔曼滤波（EKF）。
+SLAM中的运动方程和观测方程通常是**非线性函数**，所以在非线性系统中，我们必须取一定的近似，将一个非高斯分布近似成高斯分布。我们希望把卡尔曼滤波器扩展到非线性系统中，称为**扩展卡尔曼滤波**（**EKF**）。
 
 通常的做法是，在某个点附近考虑运动方程及观测方程的一阶泰勒展开，只保留一阶项，即线性的部分，然后按照线性系统进行推导。
 
@@ -134,3 +134,58 @@ $
 \hat{P_k}=(I-K_kH)\bar{P_k}
 \tag{14}
 $
+
+## 10.2　BA与图优化
+
+Bundle Adjustment简称为BA，是指从视觉重建中提炼出最优的**3D模型和相机参数**（内参数和外参数）。从每一个特征点反射出来的几束光线（bundles of light rays），在我们把相机姿态和特征点空间位置做出最优的调整（adjustment）之后，最后收束到相机光心的这个过程。
+
+SLAM的研究者们通常认为包含大量特征点和相机位姿的BA计算量过大，不适合实时计算。直到近十年，人们逐渐认识到SLAM问题中BA的**稀疏特性**，才使它能够在实时的场景中应用
+
+### 10.2.1　投影模型和BA代价函数
+
+将世界坐标系中的点p投影到像素坐标的过程就是观测方程 $z=h(x,y)$，x为此时相机的位姿，即外参R,t ，它对应的李代数为$\xi$，路标y即这里的三维点p，而观测数据则是像素坐标 $z^\Delta =[u_s ,v_s]^T$。以最小二乘的角度来考虑，则此次观测的误差为 $e=z-h(\xi,p)$。
+
+然后把其他时刻的观测量也考虑进来，可以给误差添加一个下标。设$z_{ij}$为在位姿$\xi_i$处观察路标$p_j$产生的数据，那么整体的**代价函数（Cost Function）**为：
+
+$
+\frac12\sum^m_{i=1}\sum^n_{j=1}\|\|e_{ij}\|\|^2=\frac12\sum^m_{i=1}\sum^n_{j=1}\|\|z_{ij}-h(\xi_i,p_j)\|\|^2
+\tag{15}
+$
+
+对这个最小二乘进行求解，相当于对位姿和路标同时做了调整，也就是所谓的BA。
+
+### 10.2.2　BA的求解
+
+因为观测模型$h(\xi,p)$不是线性函数，所以可以使用高斯牛顿法或列文伯格-马夸尔特法求解，即从某个初始值开始，不断地寻找下降方向$\Delta x$来找到目标函数的最优解，即不断地求解增量方程 $H\Delta x=g$ 中的增量$\Delta x$。
+
+自变量为所有待优化的变量（16），当我们给自变量一个增量时，目标函数变为（17），其中$F_{ij}$表示整个代价函数在当前状态下对相机姿态的偏导数，而$E_{ij}$表示该函数对路标点位置的偏导。
+
+$
+x=[\xi_1,\dots,\xi_m,p_1,\dots,p_n]^T
+\tag{16}
+$
+
+$
+\frac12\|\|f(x+\Delta x)\|\|^2\approx\frac12\sum^m_{i=1}\sum^n_{j=1}\|\|e_{ij}+F_{ij}\Delta\xi_i+E_{ij}\Delta p_j\|\|^2
+\tag{17}
+$
+
+把相机位姿变量放在一起（18），把相机位姿变量放在一起（19），则式（17）可以简化表达如（20）。
+
+$
+x_c=[\xi_1,\xi_2,\dots,\xi_m]^T \in \mathbb{R}^{6m}
+\tag{18}
+$
+
+$
+x_p=[p_1,p_2,\dots,p_m]^T \in \mathbb{R}^{3n}
+\tag{19}
+$
+
+$
+\frac12\|\|f(x+\Delta x)\|\|^2=\frac12\|\|e+F\Delta x_c+E\Delta x_p\|\|^2
+\tag{20}
+$
+
+需要注意的是，该式从一个由很多个小型二次项之和，变成了一个更整体的样子。这里的雅可比矩阵E和F必须是整体目标函数对整体变量的导数，它将是一个很大块的矩阵，而里头每个小分块，需要由每个误差项的导数$F_{ij}$和$E_{ij}$“拼凑”起来。
+
