update post SLAM14-10

--- a/_posts/2023-03-07-SLAM14-10.md
+++ b/_posts/2023-03-07-SLAM14-10.md
@@ -189,3 +189,39 @@ $
 
 需要注意的是，该式从一个由很多个小型二次项之和，变成了一个更整体的样子。这里的雅可比矩阵E和F必须是整体目标函数对整体变量的导数，它将是一个很大块的矩阵，而里头每个小分块，需要由每个误差项的导数$F_{ij}$和$E_{ij}$“拼凑”起来。
 
+然后，无论我们使用高斯牛顿法还是列文伯格—马夸尔特方法，最后都将面对增量线性方程：$H\Delta x=g$。高斯牛顿法和列文伯格—马夸尔特法的主要差别在于H是取$J^TJ$还是$J^TJ+\lambda I$的形式。由于我们把变量归类成了位姿和空间点两种，所以雅可比矩阵可以分块为$J=[F\ E]$。那么，以高斯牛顿法为例，则H矩阵为（21）：
+<img src="/img/in_post/SLAM14/10/1.png" width="30%">
+
+在视觉SLAM中，一幅图像有数百个特征点，大大增加了这个线性方程的规模。如果直接对H求逆来计算增量方程，由于矩阵求逆是复杂度为$O(n^3)$的操作，非常消耗计算资源。幸运的是，这里的H有一定的特殊结构,利用这个特殊结构可以加速求解过程。
+
+### 10.2.3　稀疏性和边缘化
+
+H矩阵的稀疏性是由雅可比矩阵$J(x)$引起的。考虑这些代价函数当中的其中一个$e_{ij}$。注意到，这个误差项只描述了在$\xi_i$看到$p_j$这件事，只涉及第i个相机位姿和第j个路标点，对其余部分的变量的导数都为0。所以该误差项对应的雅可比矩阵有下面的形式：
+
+$
+J_{ij}(x)=(O_{2\times 6},\dots,O_{2\times 6},\frac{\partial e_{ij}}{\partial \xi_i},O_{2\times 6},\dots,O_{2\times 3},\dots,O_{2\times 3},\frac{\partial e_{ij}}{\partial p_j},O_{2\times 3},\dots,O_{2\times 3})
+\tag{22}
+$
+
+其中$O_{2\times 6}$表示维度为2×6的0矩阵。该误差项对相机姿态的偏导$\frac{\partial e_{ij}}{\partial \xi_i}$维度为2×6，对路标点的偏导$\frac{\partial e_{ij}}{\partial p_j}$维度是2×3。这个误差项的雅可比矩阵，除了这两处为非零块之外，其余地方都为零。
+
+将这些$J_{ij}$按照一定顺序列为向量，那么整体雅可比矩阵及相应的H矩阵的稀疏情况就如下所示
+<img src="/img/in_post/SLAM14/10/2.png" width="100%">
+
+实际上存在着若干种利用H的稀疏性加速计算的方法，本节介绍视觉SLAM里一种最常用的手段：Schur消元，亦称为Marginalization（边缘化）。
+
+首先将这个矩阵按照如下所示的方式做区域划分，这4个区域正好对应了公式（21）中的4个矩阵块。
+<img src="/img/in_post/SLAM14/10/3.png" width="30%">
+
+于是，对应的线性方程组也可以由 $H\Delta x=g$ 变为如下形式：
+<img src="/img/in_post/SLAM14/10/4.png" width="30%">
+
+后面略。
+
+### 10.2.4　鲁棒核函数
+
+当误差很大时，二范数增长得太快，核函数保证每条边的误差不会大得没边而掩盖掉其他的边。具体的方式是，把原先误差的二范数度量替换成一个增长没有那么快的函数，同时保证自己的光滑性质（不然无法求导！）。因为它们使得整个优化结果更为稳健，所以又叫它们鲁棒核函数（Robust Kernel）。
+
+鲁棒核函数有许多种，例如最常用的Huber核：
+<img src="/img/in_post/SLAM14/10/5.png" width="40%">
+<img src="/img/in_post/SLAM14/10/6.png" width="50%">
