--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -13,7 +13,7 @@ tags:
 
 ## 7.1 特征点法
 
-### [7.1.2 ORB特征](https://zhoushihui210.github.io/2022/11/23/ORB-feature/)
+### [7.1.2 ORB特征](https://zhoush210.github.io/2022/11/23/ORB-feature/)
 
 ## 7.3 2D-3D: 对极几何
 
