--- a/_posts/2023-02-24-Cpp-Primer2.md
+++ b/_posts/2023-02-24-Cpp-Primer2.md
@@ -47,7 +47,7 @@ int main(){
 
 与内置数组相比，**array**是一种更安全、更容易使用的数组类型。
 
-通常，使用vector是最好的选择，除非你有很好的理由选择其他容器。
+通常，**使用vector是最好的选择**，除非你有很好的理由选择其他容器。
 
 如果必须在中间位置插入元素，考虑在输入阶段使用list，一旦输入完成，将list中的内容拷贝到一个vector中。
 
@@ -74,3 +74,62 @@ swap(svec1, svec2);
 与其他容器不同，对一个**string**调用**swap**会导致**迭代器、引用和指针失效**。
 
 与其他容器不同，**swap**两个**array**会真正交换它们的元素。
+
+## 十一、关联容器
+
+**顺序容器**中的元素是按它们在容器中的**位置**来顺序保存和访问的。**关联容器**中的元素是按**关键字**来保存和访问的。
+
+标准库提供8个关联容器。map和multimap定义在头文件map中；set和multiset定义在头文件set中；无序容器则定义在头文件unordered_map和unordered_set中。
+<img src="/img/in_post/Cpp-Primer/5.png" width="100%">
+
+当初始化一个map时，必须提供关键字类型和值类型。我们将每个关键字-值对包围在花括号中：{key,value}
+
+**pair**是一种标准库类型，它定义在头文件utility中，一个pair保存两个数据成员。类似容器，pair是一个用来生成特定类型的模板。创建pair对象的函数可以使用列表初始化或make_pair：
+```
+pair<string, int> a = {"aaa", 1};
+pair<string, int> b = make_pair("bbb", 1);
+```
+
+关联容器定义了下列类型，表示容器关键字和值的类型。对于set类型，key_type和value_type是一样的；set中保存的值就是关键字。在一个map中，元素是关键字-值对。即，每个元素是一个pair对象，包含一个关键字和一个关联的值。由于我们不能改变一个元素的关键字，因此这些pair的关键字部分是const的。
+<img src="/img/in_post/Cpp-Primer/6.png" width="100%">
+
+对map而言，value_type是一个pair类型，其first成员保存const的关键字key，second成员保存值value。
+
+set的迭代器是const的。
+
+关联容器定义了一个名为**find**的成员，它通过一个给定的关键字直接获取元素。我们可以用泛型find算法来查找一个元素，但此算法会进行顺序搜索。使用关联容器定义的专用的find成员会比调用泛型find快得多。
+
+insert（或emplace）**返回的值**依赖于容器类型和参数。对于不包含重复关键字的容器，添加单一元素的insert和emplace版本返回一个pair，告诉我们**插入操作是否成功**。pair的first成员是一个迭代器，指向具有给定关键字的元素；second成员是一个bool值，指出元素是插入成功还是已经存在于容器中。如果关键字已在容器中，则insert什么事情也不做，且返回值中的bool部分为false。如果关键字不存在，元素被插入容器中，且bool值为true。
+
+关联容器定义了三个版本的erase:
+<img src="/img/in_post/Cpp-Primer/7.png" width="100%">
+
+map和unordered_map容器提供了**下标运算符**和一个对应的**at函数**。与其他下标运算符不同的是，如果关键字并不在map中，会为它创建一个元素并插入到map中，关联值将进行值初始化。由于下标运算符可能插入一个新元素，我们只可以对**非const**的map使用下标操作。
+<img src="/img/in_post/Cpp-Primer/8.png" width="100%">
+
+set类型不支持下标，因为set中没有与关键字相关联的“值”。
+
+通常情况下，解引用一个迭代器所返回的类型与下标运算符返回的类型是一样的。但对map则不然：当对一个map进行下标操作时，会获得一个mapped_type对象；但当解引用一个map迭代器时，会得到一个value_type对象。
+
+有时只是想知道一个元素是否已在map中，但在不存在时并不想添加元素。在这种情况下，就不能使用下标运算符，应该使用find：
+```
+if(word_count.find("foobar") == word_count.end())
+    cout << "foobar is not in the map" << endl;
+```
+
+如果一个multimap或multiset中有多个元素具有给定关键字，则这些元素在容器中会相邻存储。
+
+如果关键字在容器中，lower_bound返回的迭代器将指向**第一个**具有给定关键字的元素，而upper_bound返回的迭代器则指向**最后一个**匹配给定关键字的元素**之后**的位置。如果元素不在multimap中，则lower_bound和upper_bound会返回相等的迭代器——指向一个不影响排序的关键字插入位置。因此，用相同的关键字调用lower_bound和upper_bound会得到一个迭代器范围，表示所有具有该关键字的元素的范围。但是返回的迭代器可能是容器的尾后迭代器。
+
+equal_range函数接受一个关键字，返回一个迭代器pair。若关键字存在，则第一个迭代器指向第一个与关键字匹配的元素，第二个迭代器指向最后一个匹配元素之后的位置。若未找到匹配元素，则两个迭代器都指向关键字可以插入的位置。
+
+新标准定义了4个无序关联容器。这些容器不是使用**比较运算符**来组织元素，而是使用一个**哈希函数**和关键字类型的**==运算符**。
+
+无序容器在存储上组织为**一组桶**，每个桶保存零个或多个元素。无序容器使用一个哈希函数将元素映射到桶。为了访问一个元素，容器首先计算元素的哈希值，它指出应该搜索哪个桶。容器将具有一个特定哈希值的所有元素都保存在相同的桶中。如果容器允许重复关键字，所有具有相同关键字的元素也都会在同一个桶中。因此，无序容器的性能依赖于哈希函数的质量和桶的数量和大小。
+
+无序容器提供了一组管理桶的函数：
+<img src="/img/in_post/Cpp-Primer/9.png" width="100%">
+
+允许**重复关键字**的容器的名字中都包含**multi**；而使用**哈希**技术的容器的名字都以**unordered**开头。
+
+有序容器的迭代器通过关键字有序访问容器中的元素。无论在有序容器中还是在无序容器中，具有**相同关键字**的元素都是**相邻存储**的。
