update post SLAM14-13

--- a/_posts/2023-04-24-SLAM14-13.md
+++ b/_posts/2023-04-24-SLAM14-13.md
@@ -116,3 +116,19 @@ $
 2. 当新数据产生时，通过**极线搜索**和**块匹配**确定投影点位置。
 3. 根据**几何关系**计算三角化后的**深度及不确定性**。
 4. 将当前观测融合进上一次的估计中。若收敛则停止计算，否则返回第2步。
+
+### 13.5.2　八叉树地图
+
+在**八叉树**中，我们在节点中存储它是否被占据的信息，当某个方块的所有子节点都被占据或都不被占据时，就没必要展开这个节点 。所以八叉树比点云节省大量的存储空间。
+
+## 13.6　TSDF地图和Fusion系列
+
+在本讲的最后，我们介绍一个与SLAM非常相似但又有稍许不同的研究方向：实时三维重建。
+<img src="/img/in_post/SLAM14/13/4.png" width="50%">
+
+TSDF是Truncated Signed Distance Function的缩写，不妨译作截断符号距离函数。与八叉树相似，TSDF地图也是一种网格式（或者说方块式）的地图。每个TSDF体素内，存储了该小块与距其最近的物体表面的距离。
+
+如果小块在该物体表面的前方，它就有一个正的值；反之，如果该小块位于表面之后，那么就为负值。由于物体表面通常是很薄的一层，所以就把值太大的和太小的都取成1和- 1，这样就得到了截断之后的距离，也就是所谓的TSDF。那么按照定义，TSDF为0的地方就是表面本身——或者，由于数值误差的存在，TSDF由负号变成正号的地方就是表面本身。
+<img src="/img/in_post/SLAM14/13/5.png" width="50%">
+
+由于TSDF没有颜色信息，意味着我们可以只使用深度图 ，不使用彩色图，就完成位姿估计，这在一定程度上摆脱了视觉里程计算法对光照和纹理的依赖性，使得RGB-D重建更加稳健。
